k8s/resources/camserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camserver
  namespace: cam
spec:
  selector:
    matchLabels:
      app: camserver
  replicas: 2
  template:
    metadata:
      labels:
        app: camserver
    spec:
      containers:
      - name: camserver
        image: 898843949075.dkr.ecr.us-east-1.amazonaws.com/camserver
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: camserver
  namespace: cam
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  type: NodePort
  selector:
    app: camserver
